opam-version: "2.0"
name: "day01"
version: "1.0.0"
synopsis: "AoC 2025 Day 1: Safe Dial in Hardcaml"
maintainer: ["Your Name"]
authors: ["Your Name"]
license: "MIT"
depends: [
  "dune" {>= "3.0"}
  "ocaml" {>= "4.14.0"}
  "base"
  "stdio"
  "hardcaml"
  "ppx_hardcaml"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
